Improve reliability of WebAppContextTest
* Don't use deprecated methods/classes
* Introduce notInTempDirectory predicate
* Use notInTempDirectory when testing extraClassPath behaviors
* Improve test resource discovery
  for ee9 -> ee8 layer.